Fix wrong font weight for widget text.

--- a/assets/scss/core/components/_widgets.scss
+++ b/assets/scss/core/components/_widgets.scss
@@ -1,13 +1,11 @@
 .widget {
     margin: 0 auto 2em;
-    font-weight: $text-font-weight;
 
     .widget-title,
     .widgettitle {
         margin-top: 0;
         margin-bottom: 15px;
         padding-bottom: 15px;
-        font-weight: $headings-font-weight;
         font-size: $font-size-large;
         border-bottom: 1px solid $color--light_grey;
     }
